c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_parse/static_and_extern.c
/* A declaration cannot include both static and extern specifiers */
static extern int a;

int main(void) {
    return 0;
}